--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
             "@shared/*": ["shared/*"]
         }
     },
-    "include": ["src"],
+    "include": ["src", "backup/LedgerContainer"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
